Cluster scaling enchancements 	- Updated ConfigFileBasedClusterMetadataProvider to handle both file and http protocols. 	- Server open logic updated to handle joining an existing cluster.
Change-Id: Idbaa39733c7bf814510c94c4b21e3714b3f97f8f